<resources>
    <string name="store_picture_title">Save image</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="auth_google_play_services_client_google_display_name">Google</string>
    <string name="auth_google_play_services_client_facebook_display_name">Facebook</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="place_autocomplete_search_hint">Search</string>
    <string name="place_autocomplete_clear_button">Clear search</string>
    <string name="wallet_buy_button_place_holder">Buy with Google</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="app_name">FakeGPS Free</string>
    <string name="double_tap_on_map_hint">[double tap on the map to add]</string>
    <string name="contact_autocomplete_hint">Add contact name/number...</string>
    <string name="sms_message_hint">Text message...</string>
    <string name="reminder_hint">Reminder alert text...</string>
    <string name="add_phone_number_hint">Add phone number...</string>
    <string name="search_address_bar_hint">Address or GPS coordinates...</string>
    <string name="hint_lat">40.74121857</string>
    <string name="hint_lon">-73.99498749</string>
    <string name="missing_lon_lat">Both Latitude and Longitude must be filled out</string>
    <string name="hint_lat_text">Latitude</string>
    <string name="hint_lon_text">Longitude</string>
    <string name="stop_button">Stop</string>
    <string name="menu_other_apps">Our Apps</string>
    <string name="menu_other_free_apps">Promo Apps</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_faves">Favorites</string>
    <string name="menu_history">History</string>
    <string name="menu_likeus">Like us</string>
    <string name="menu_follow">Follow us</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_pro">Pro</string>
    <string name="hint_long_press">Long press on item to delete, short press to view on map</string>
    <string name="saved_text">Saved to favorites</string>
    <string name="processing">Processing...</string>
    <string name="search_location">Searching for location...</string>
    <string name="search_current_location">Searching for current location...</string>
    <string name="contact_no_address">Contact has no address</string>
    <string name="pick_address_title">Pick an address!</string>
    <string name="no_location_result">Error: could not match the location...</string>
    <string name="loading_location">Loading location...</string>
    <string name="unknown_street">Unknown street</string>
    <string name="service_management_title">Manage the service</string>
    <string name="service_start">Start the location service</string>
    <string name="service_stop">Stop the location service</string>
    <string name="pref_go_pro_title">Download Pro Version</string>
    <string name="pref_go_pro_key">buyprokey</string>
    <string name="pref_go_pro_summary">To unlock all the settings, root support with better, faster spoofing without mock locations, wifi enabled and more features (favourites and history) please support us by clicking here, thank you!</string>
    <string name="start_button">Start</string>
    <string name="pref_category_gpsmove">GPS Move Location</string>
    <string name="pref_enable_move_fake_gps_key">movefakelocationcheckbox</string>
    <string name="pref_enable_move_fake_gps_title">Move around fake location</string>
    <string name="pref_enable_move_fake_gps_summary">If enabled will change the fake location in a radius defined below</string>
    <string name="pref_enable_move_fake_gps_default">false</string>
    <string name="pref_timeframe_move_fake_gps_key">movefakelocationtimeout</string>
    <string name="pref_timeframe_move_fake_gps_title">Timeout in seconds</string>
    <string name="pref_timeframe_move_fake_gps_summary">The time between moving around of the fake location</string>
    <string name="pref_timeframe_move_fake_gps_default" />
    <string name="pref_app_resume_key">enableautoclosekey</string>
    <string name="pref_app_resume_default">true</string>
    <string name="pref_app_resume_title">Enable auto close</string>
    <string name="pref_app_resume_summary">Uncheck this box if you want to leave the app opened when starting the service (useful for Samsung Split Screen)</string>
    <string name="pref_distance_move_fake_gps_key">movefakelocationdistance</string>
    <string name="pref_distance_move_fake_gps_title">The distance to move around</string>
    <string name="pref_distance_move_fake_gps_summary">Set the radius for moving the fake location, values below 100 meters will show almost no result</string>
    <string name="pref_distance_move_fake_gps_default" />
    <string name="pref_start_boot_key">startboot</string>
    <string name="pref_start_boot">Start on boot</string>
    <string name="pref_start_boot_summary">Starts the service in the background when the phone boots, uses last defined fake position</string>
    <string name="pref_start_boot_default">false</string>
    <string name="pref_altitude_gps_key">altitudegpskey</string>
    <string name="pref_altitude_gps_title">GPS Altitude</string>
    <string name="pref_altitude_gps_summary">Change the altitude of the GPS fix (in meters)</string>
    <string name="pref_altitude_gps_default">65</string>
    <string name="pref_update_interval_key">prefupdateintervalkey</string>
    <string name="pref_update_interval_title">Update interval</string>
    <string name="pref_update_interval_summary">Change the update interval, return to default if problems occur (in milliseconds - thousands)</string>
    <string name="pref_update_interval_default">1000</string>
    <string name="pref_accuracy_gps_key">accuracygpskey</string>
    <string name="pref_accuracy_gps_title">GPS Accuracy</string>
    <string name="pref_accuracy_gps_summary">Change the accuracy of the GPS fix (in meters) - higher than 50 meters could lead to problems, the real fix being used instead, disable Wifi locations</string>
    <string name="pref_accuracy_gps_default">1</string>
    <string name="pref_speed_gps_key">speedgpskey</string>
    <string name="pref_speed_gps_title">GPS Speed</string>
    <string name="pref_speed_gps_summary">Set the speed in km/h</string>
    <string name="pref_speed_gps_default">3</string>
    <string name="pref_hide_icon_key">hideiconkey</string>
    <string name="pref_hide_icon_title">Hide Icon</string>
    <string name="pref_hide_icon_summary">Hides the icon in the status bar, requires restart via the stop/start button if running</string>
    <string name="pref_hide_icon_default">false</string>
    <string name="pref_expert_mode_key">expertmodekey</string>
    <string name="pref_expert_mode_title">Expert Mode</string>
    <string name="pref_expert_mode_summary">Root only! In this mode you can enable Wifi/Coarse Location (Viber), disable Mock Locations and spoof easier!</string>
    <string name="pref_expert_mode_default">false</string>
</resources>