<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include android:id="@id/ADRelLayout" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" layout="@layout/ads" />
    <EditText android:id="@id/editLon" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="52.0dip" android:hint="@string/hint_lon" android:ems="10" android:layout_below="@id/ADRelLayout" android:layout_alignParentLeft="true" />
    <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:text="@string/hint_lon_text" android:layout_below="@id/ADRelLayout" android:layout_alignLeft="@id/editLat" />
    <EditText android:id="@id/editLat" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_lat" android:ems="10" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
    <TextView android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/hint_lat_text" android:layout_above="@id/editLat" android:layout_alignLeft="@id/editLat" />
    <Button android:id="@id/stopButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="55.0dip" android:layout_marginRight="98.0dip" android:text="@string/stop_button" android:layout_below="@id/editLat" android:layout_alignParentRight="true" />
    <Button android:id="@id/startButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/start_button" android:layout_toRightOf="@id/textView2" android:layout_alignBaseline="@id/stopButton" android:layout_alignBottom="@id/stopButton" />
</RelativeLayout>